--- a/views/manga.ejs
+++ b/views/manga.ejs
@@ -17,12 +17,18 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/upload">Upload Manga</a>
-          </li>
+          <% if (user) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/logout">Logout</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/upload">Upload Manga</a>
+            </li>
+          <% } else { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/login">Login</a>
+            </li>
+          <% } %>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -38,7 +44,12 @@
         <img src="/manga/<%= manga.id %>/<%= manga.cover %>" alt="<%= manga.title %>" class="img-fluid rounded">
       </div>
       <div class="col-md-8">
-        <h1><%= manga.title %></h1>
+        <h1>
+          <%= manga.title %>
+          <% if (user) { %>
+            <a href="/manga/<%= manga.id %>/edit" class="btn btn-sm btn-outline-light"><i class="fas fa-pencil-alt"></i></a>
+          <% } %>
+        </h1>
         <p><strong>Alternative Title:</strong> <%= manga.otherTitle %></p>
         <p><strong>Author:</strong> <%= manga.author %></p>
         <p><strong>Artist:</strong> <%= manga.artist %></p>
@@ -50,13 +61,29 @@
     <hr class="my-4">
 
     <h2>Chapters</h2>
-    <ul class="list-group">
-      <% manga.chapters.forEach(chapter => { %>
-        <a href="/manga/<%= manga.id %>/<%= chapter %>" class="list-group-item list-group-item-action bg-dark text-white"><%= chapter %></a>
-      <% }); %>
-    </ul>
+    <table class="table table-dark table-striped">
+      <thead>
+        <tr>
+          <th>Chapter</th>
+          <% if (user) { %>
+            <th>Edit</th>
+          <% } %>
+        </tr>
+      </thead>
+      <tbody>
+        <% manga.chapters.forEach(chapter => { %>
+          <tr>
+            <td><a href="/manga/<%= manga.id %>/<%= chapter.id %>" class="text-white text-decoration-none"><%= chapter.title %></a></td>
+            <% if (user) { %>
+              <td><a href="/manga/<%= manga.id %>/<%= chapter.id %>/edit" class="btn btn-sm btn-outline-light"><i class="fas fa-pencil-alt"></i></a></td>
+            <% } %>
+          </tr>
+        <% }); %>
+      </tbody>
+    </table>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
 </html>
