--- a/views/manga.ejs
+++ b/views/manga.ejs
@@ -60,8 +60,13 @@
 
     <hr class="my-4">
 
-    <h2>Chapters</h2>
-    <table class="table table-dark table-striped">
+    <div class="d-flex justify-content-between align-items-center">
+      <h2>Chapters</h2>
+      <% if (user) { %>
+        <a href="/manga/<%= manga.id %>/upload-chapter" class="btn btn-primary">Upload Chapter</a>
+      <% } %>
+    </div>
+    <table class="table table-dark table-striped mt-2">
       <thead>
         <tr>
           <th>Chapter</th>
