--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,6 +25,16 @@
             <li class="nav-item">
               <a class="nav-link" href="/upload">Upload Manga</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/bookmarks">Bookmarks</a>
+            </li>
+            <li class="nav-item">
+              <form action="/settings/family-safe" method="POST" class="nav-link">
+                <button type="submit" class="btn btn-sm <%= user.familySafe ? 'btn-success' : 'btn-danger' %>">
+                  Family Safe: <%= user.familySafe ? 'On' : 'Off' %>
+                </button>
+              </form>
+            </li>
           <% } else { %>
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a>
