--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,8 +3,8 @@
   <div class="col-md-6">
     <div class="card bg-secondary text-white mt-5">
       <div class="card-body">
-        <h1 class="card-title text-center">Login</h1>
-        <form action="/login" method="POST">
+        <h1 class="card-title text-center">Register</h1>
+        <form action="/register" method="POST">
           <div class="mb-3">
             <label for="username" class="form-label">Username</label>
             <input type="text" class="form-control" id="username" name="username" required>
@@ -13,11 +13,8 @@
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" name="password" required>
           </div>
-          <button type="submit" class="btn btn-primary w-100">Login</button>
+          <button type="submit" class="btn btn-primary w-100">Register</button>
         </form>
-        <div class="text-center mt-3">
-          <a href="/register" class="text-white">Don't have an account? Register</a>
-        </div>
       </div>
     </div>
   </div>
