--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -29,5 +29,9 @@
     <label for="cover" class="form-label">Cover Image</label>
     <input class="form-control" type="file" id="cover" name="cover" required>
   </div>
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="rating" name="rating">
+    <label class="form-check-label" for="rating">18+</label>
+  </div>
   <button type="submit" class="btn btn-primary">Upload Manga</button>
 </form>
