--- a/views/edit-chapter.ejs
+++ b/views/edit-chapter.ejs
@@ -7,3 +7,7 @@
   </div>
   <button type="submit" class="btn btn-primary">Update Chapter</button>
 </form>
+
+<form action="/manga/<%= manga.id %>/<%= chapter.id %>/delete" method="POST" class="mt-3" onsubmit="return confirm('Are you sure you want to delete this chapter?');">
+  <button type="submit" class="btn btn-danger">Delete Chapter</button>
+</form>
