--- a/views/edit-manga.ejs
+++ b/views/edit-manga.ejs
@@ -31,3 +31,7 @@
   </div>
   <button type="submit" class="btn btn-primary">Update Manga</button>
 </form>
+
+<form action="/manga/<%= manga.id %>/delete" method="POST" class="mt-3" onsubmit="return confirm('Are you sure you want to delete this manga?');">
+  <button type="submit" class="btn btn-danger">Delete Manga</button>
+</form>
