--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,7 +26,7 @@
               <a class="nav-link" href="/upload">Upload Manga</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/bookmarks">Bookmarks</a>
+              <a class="nav-link" href="/profile">Profile</a>
             </li>
             <li class="nav-item">
               <form action="/settings/family-safe" method="POST" class="nav-link">
