--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,16 @@
 
-<h1 class="mb-4">My Bookmarks</h1>
+<h1 class="mb-4">My Profile</h1>
+
+<div class="row">
+  <div class="col-md-6">
+    <h2>My Details</h2>
+    <p><strong>Username:</strong> <%= user.username %></p>
+  </div>
+</div>
+
+<hr class="my-4">
+
+<h2>My Bookmarks</h2>
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-4">
   <% mangaLibrary.forEach(manga => { %>
     <div class="col">
