--- a/views/edit-chapter.ejs
+++ b/views/edit-chapter.ejs
@@ -1,13 +1,25 @@
 
-<h1 class="mb-4">Edit Chapter</h1>
+<h1 class="title has-text-white">Edit Chapter</h1>
 <form action="/manga/<%= manga.id %>/<%= chapter.id %>/edit" method="POST">
-  <div class="mb-3">
-    <label for="title" class="form-label">Chapter Title</label>
-    <input type="text" class="form-control" id="title" name="title" value="<%= chapter.title %>" required>
+  <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+  <div class="field">
+    <label for="title" class="label has-text-white">Chapter Title</label>
+    <div class="control">
+      <input type="text" class="input" id="title" name="title" value="<%= chapter.title %>" required>
+    </div>
   </div>
-  <button type="submit" class="btn btn-primary">Update Chapter</button>
+  <div class="field">
+    <div class="control">
+      <button type="submit" class="button is-primary">Update Chapter</button>
+    </div>
+  </div>
 </form>
 
 <form action="/manga/<%= manga.id %>/<%= chapter.id %>/delete" method="POST" class="mt-3" onsubmit="return confirm('Are you sure you want to delete this chapter?');">
-  <button type="submit" class="btn btn-danger">Delete Chapter</button>
+  <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+  <div class="field">
+    <div class="control">
+      <button type="submit" class="button is-danger">Delete Chapter</button>
+    </div>
+  </div>
 </form>
