--- a/views/manga.ejs
+++ b/views/manga.ejs
@@ -1,48 +1,58 @@
-
-<div class="row">
-  <div class="col-md-4">
-    <img src="/manga/<%= manga.id %>/<%= manga.cover %>" alt="<%= manga.title %>" class="img-fluid rounded">
+<div class="columns">
+  <div class="column is-one-third">
+    <figure class="image is-2by3">
+      <img src="/manga/<%= manga.id %>/<%= manga.cover %>" alt="<%= manga.title %>">
+    </figure>
   </div>
-  <div class="col-md-8">
-    <h1>
-      <%= manga.title %>
+  <div class="column">
+    <div class="content has-text-white">
+      <h1 class="title has-text-white">
+        <%= manga.title %>
+        <% if (user && user.role === 'admin') { %>
+          <a href="/manga/<%= manga.id %>/edit" class="button is-small is-light is-outlined"><span class="icon is-small"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></span></a>
+        <% } %>
+      </h1>
+      <p><strong>Alternative Title:</strong> <%= manga.otherTitle %></p>
+      <p><strong>Author:</strong> <%= manga.author %></p>
+      <p><strong>Artist:</strong> <%= manga.artist %></p>
+      <p><strong>Genre:</strong> <%= manga.genre.join(', ') %></p>
+      <p><strong>Synopsis:</strong> <%= manga.synopsis %></p>
       <% if (user) { %>
-        <a href="/manga/<%= manga.id %>/edit" class="btn btn-sm btn-outline-light"><i class="fas fa-pencil-alt"></i></a>
+        <div class="mt-3">
+          <% if (user.bookmarks.includes(manga.id)) { %>
+            <form action="/manga/<%= manga.id %>/unbookmark" method="POST">
+              <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+              <button type="submit" class="button is-danger">Remove from Bookmarks</button>
+            </form>
+          <% } else { %>
+            <form action="/manga/<%= manga.id %>/bookmark" method="POST">
+              <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+              <button type="submit" class="button is-primary">Add to Bookmarks</button>
+            </form>
+          <% } %>
+        </div>
       <% } %>
-    </h1>
-    <p><strong>Alternative Title:</strong> <%= manga.otherTitle %></p>
-    <p><strong>Author:</strong> <%= manga.author %></p>
-    <p><strong>Artist:</strong> <%= manga.artist %></p>
-    <p><strong>Genre:</strong> <%= manga.genre.join(', ') %></p>
-            <p><strong>Synopsis:</strong> <%= manga.synopsis %></p>
-            <% if (user) { %>
-              <div class="mt-3">
-                <% if (user.bookmarks.includes(manga.id)) { %>
-                  <form action="/manga/<%= manga.id %>/unbookmark" method="POST">
-                    <button type="submit" class="btn btn-danger">Remove from Bookmarks</button>
-                  </form>
-                <% } else { %>
-                  <form action="/manga/<%= manga.id %>/bookmark" method="POST">
-                    <button type="submit" class="btn btn-primary">Add to Bookmarks</button>
-                  </form>
-                <% } %>
-              </div>
-            <% } %>  </div>
+    </div>
+  </div>
 </div>
 
-<hr class="my-4">
+<hr>
 
-<div class="d-flex justify-content-between align-items-center">
-  <h2>Chapters</h2>
-  <% if (user) { %>
-    <a href="/manga/<%= manga.id %>/upload-chapter" class="btn btn-primary">Upload Chapter</a>
-  <% } %>
+<div class="level">
+  <div class="level-left">
+    <h2 class="title is-4 has-text-white">Chapters</h2>
+  </div>
+  <div class="level-right">
+    <% if (user && user.role === 'admin') { %>
+      <a href="/manga/<%= manga.id %>/upload-chapter" class="button is-primary">Upload Chapter</a>
+    <% } %>
+  </div>
 </div>
-<table class="table table-dark table-striped mt-2">
+<table class="table is-fullwidth is-striped is-hoverable is-dark">
   <thead>
     <tr>
       <th>Chapter</th>
-      <% if (user) { %>
+      <% if (user && user.role === 'admin') { %>
         <th>Edit</th>
       <% } %>
     </tr>
@@ -50,9 +60,9 @@
   <tbody>
     <% manga.chapters.forEach(chapter => { %>
       <tr>
-        <td><a href="/manga/<%= manga.id %>/<%= chapter.id %>" class="text-white text-decoration-none"><%= chapter.title %></a></td>
-        <% if (user) { %>
-          <td><a href="/manga/<%= manga.id %>/<%= chapter.id %>/edit" class="btn btn-sm btn-outline-light"><i class="fas fa-pencil-alt"></i></a></td>
+        <td><a href="/manga/<%= manga.id %>/<%= chapter.id %>" class="has-text-white"><%= chapter.title %></a></td>
+        <% if (user && user.role === 'admin') { %>
+          <td><a href="/manga/<%= manga.id %>/<%= chapter.id %>/edit" class="button is-small is-light is-outlined"><span class="icon is-small"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></span></a></td>
         <% } %>
       </tr>
     <% }); %>
